# index-monte-carlo

./: .gitignore  LICENSE  README.md  app.py  demo.ipynb  pyproject.toml  readme.txt  requirements.txt
indices_mc/: __init__.py  analysis.py  calibration.py  cli.py  engine.py  parameters.py  plotting.py  presets.py
tests/: test_engine.py  test_presets.py
